# dexloader

./: .gitignore  Cargo.toml  README.md
assets/: page.css
src/: connection.rs  epub.rs  lib.rs  main.rs  manga.rs  util.rs
src/manga/: author.rs  chapter.rs  cover.rs  manga.rs  manga_data.rs
src/manga/chapter/: at_home.rs  chapter.rs  chapter_list.rs  manga_image.rs
