[package]
name = "mangadex_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.0", features = ["full"] }
reqwest = { version = "0.11.10", features = ["json"] }
futures = { version = "0.3.*" }
log = "0.4.*"
